# raksha

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/raksha/: __init__.py  cli.py  models.py  report.py  simulator.py
src/raksha/analyzer/: __init__.py  heatmap.py  stats.py  timeline.py
src/raksha/detection/: __init__.py  anomaly.py  motion.py  person.py
src/raksha/tracking/: __init__.py  alerts.py  tracker.py  zones.py
tests/: test_alerts.py  test_analyzer.py  test_anomaly.py  test_benchmark.py  test_core.py  test_integration.py  test_models.py  test_motion.py  test_person.py  test_simulator.py  test_tracker.py  test_zones.py
